mealie/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mealie-webserver
  namespace: prod
  labels:
    app: mealie-webserver
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app: mealie
