mealie/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mealie
  namespace: mealie
  annotations:
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/dns01-provider: cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.xaf.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-webserver
                port:
                  number: 80
  tls:
    - hosts:
        - mealie.xaf.world
      secretName: mealie-tls
